Ultimo cambio para entrega

--- a/Módulo9Katas.ipynb
+++ b/Módulo9Katas.ipynb
@@ -29,11 +29,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Función para leer 3 tanques de combustible y muestre el promedio\n"
+        "# Función para leer 3 tanques de combustible y muestre el promedio\n",
+        "def reporte(tanque1, tanque2, tanque3):\n",
+        "    promedio = (tanque1+tanque2+tanque3)/3\n",
+        "    return f\"\"\"Reporte: Promedio: {promedio} tanque1: {tanque1} tanque2: {tanque2} tanque3: {tanque3}\"\"\"\n"
       ]
     },
     {
@@ -45,12 +48,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Reporte: Promedio: 163.33333333333334 tanque1: 160 tanque2: 150 tanque3: 180\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
-        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))"
+        "# Llamamos a la función que genera el reporte print(funcion(tanque1, tanque2, tanque3))\n",
+        "print(reporte(160,150,180))"
       ]
     },
     {
@@ -62,11 +74,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "163.33333333333334\n"
+          ]
+        }
+      ],
       "source": [
-        "# Función promedio "
+        "# Función promedio \n",
+        "def promedio(valores):\n",
+        "    total = sum(valores)\n",
+        "    cantidadValores = len(valores)\n",
+        "    return total/cantidadValores\n",
+        "\n",
+        "print(promedio([160,150,180]))"
       ]
     },
     {
@@ -78,11 +104,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Reporte: Promedio: 186.66666666666666 tanque1: 150 tanque2: 200 tanque3: 210\n"
+          ]
+        }
+      ],
       "source": [
-        "# Actualiza la función"
+        "# Actualiza la función\n",
+        "def reporte(tanque1, tanque2, tanque3):\n",
+        "    return f\"\"\"Reporte: Promedio: {promedio([tanque1, tanque2, tanque3])} tanque1: {tanque1} tanque2: {tanque2} tanque3: {tanque3}\"\"\"\n",
+        "\n",
+        "print(reporte(150, 200, 210))"
       ]
     },
     {
@@ -109,11 +147,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Destino: neptuno\n",
+            "    tiempo de vuelo; 110\n",
+            "    combustible: 300\n"
+          ]
+        }
+      ],
       "source": [
-        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno"
+        "# Función con un informe preciso de la misión. Considera hora de prelanzamiento, tiempo de vuelo, destino, tanque externo y tanque interno\n",
+        "def informe(Hora_pre_lanzamiento, tiempo_vuelo, destino, tanque_externo, tanque_interno):\n",
+        "    return f\"\"\"\n",
+        "    Destino: {destino}\n",
+        "    tiempo de vuelo; {Hora_pre_lanzamiento+tiempo_vuelo}\n",
+        "    combustible: {tanque_externo+tanque_interno}\"\"\"\n",
+        "\n",
+        "print(informe(50, 60, \"neptuno\", 100, 200))"
       ]
     },
     {
@@ -125,11 +181,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Destino: Marte\n",
+            "    Tiempo de vuelo: 120\n",
+            "    combustible: 300000\n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función de reporte considerando lo anterior"
+        "# Escribe tu nueva función de reporte considerando lo anterior\n",
+        "def informe2(destino, *minutos, **combustible):\n",
+        "    return  f\"\"\"\n",
+        "    Destino: {destino}\n",
+        "    Tiempo de vuelo: {sum(minutos)}\n",
+        "    combustible: {sum(combustible.values())}\"\"\"\n",
+        "\n",
+        "print(informe2(\"Marte\", 30, 40, 50, tanque1=100000, tanque2=200000))\n"
       ]
     },
     {
@@ -141,11 +215,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 36,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "    Destino: Marte\n",
+            "    Tiempo de vuelo: 120\n",
+            "    combustible: 300000 tanque1: 100000 galones tanque2: 200000 galones\n"
+          ]
+        }
+      ],
       "source": [
-        "# Escribe tu nueva función"
+        "# Escribe tu nueva función\n",
+        "def informe(destino, *minutos, **combustible):\n",
+        "    mensaje = f\"\"\"\n",
+        "    Destino: {destino}\n",
+        "    Tiempo de vuelo: {sum(minutos)}\n",
+        "    combustible: {sum(combustible.values())}\"\"\"\n",
+        "\n",
+        "    for tanque, galones in combustible.items():\n",
+        "        mensaje += f\" {tanque}: {galones} galones\"\n",
+        "    return mensaje\n",
+        "\n",
+        "print(informe(\"Marte\", 30, 40, 50, tanque1=100000, tanque2=200000))"
       ]
     },
     {
@@ -324,7 +420,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.10"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
