--- a/Módulo8Katas.ipynb
+++ b/Módulo8Katas.ipynb
@@ -40,11 +40,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Crea un diccionario llamado planet con los datos propuestos"
+        "# Crea un diccionario llamado planet con los datos propuestos\n",
+        "planeta={\n",
+        "    'name':'Mars',\n",
+        "    'moons':2\n",
+        "}"
       ]
     },
     {
@@ -56,11 +60,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mars\n",
+            "2\n",
+            "Mars has 2 moons\n"
+          ]
+        }
+      ],
       "source": [
-        "# Muestra el nombre del planeta y el número de lunas que tiene."
+        "# Muestra el nombre del planeta y el número de lunas que tiene.\n",
+        "print(planeta.get('name'))\n",
+        "print(planeta.get('moons'))\n",
+        "print(f'{planeta[\"name\"]} has {planeta[\"moons\"]} moons')"
       ]
     },
     {
@@ -84,11 +101,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Agrega la clave circunferencia con los datos proporcionados previamente"
+        "# Agrega la clave circunferencia con los datos proporcionados previamente\n",
+        "planeta['circunferencia en kilometros'] = {\n",
+        "    'polar':6752,\n",
+        "    'equatorial':6792\n",
+        "}"
       ]
     },
     {
@@ -100,11 +121,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Mars polar diameter: 6752\n"
+          ]
+        }
+      ],
       "source": [
-        "# Imprime el nombre del planeta con su circunferencia polar."
+        "# Imprime el nombre del planeta con su circunferencia polar.\n",
+        "print(f'{planeta[\"name\"]} polar diameter: {planeta[\"circunferencia en kilometros\"][\"polar\"]}')"
       ]
     },
     {
@@ -131,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -164,11 +194,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [],
       "source": [
-        "# Añade el código para determinar el número de lunas."
+        "# Añade el código para determinar el número de lunas.\n",
+        "numero_de_lunas = planet_moons.values()\n",
+        "planetas = len(planet_moons.keys())"
       ]
     },
     {
@@ -180,11 +212,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 27,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "17.833333333333332\n"
+          ]
+        }
+      ],
       "source": [
-        "# Agrega el código para contar el número de lunas. "
+        "# Agrega el código para contar el número de lunas. \n",
+        "total_de_lunas=0\n",
+        "for moon in numero_de_lunas:\n",
+        "    total_de_lunas = total_de_lunas + moon\n",
+        "\n",
+        "promedio = total_de_lunas/planetas\n",
+        "print(promedio)"
       ]
     },
     {
@@ -330,7 +376,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.5"
+      "version": "3.10.2"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
